# finetuning-scheduler

./: .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.actions/: assistant.py
.azure-pipelines/: gpu-tests.yml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  mergify.yml  prune-packages.py  set-min-requirements.py  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  refactor.md
.github/actions/install-ci-dependencies/: action.yml
.github/workflows/: ci_schema.yml  ci_test-full.yml  code-checks.yml  copilot-setup-steps.yml  documentation-links.yml  release-docker.yml  release-pypi.yml
dockers/: build_image_version.sh  docker_images_main.sh  docker_images_release.sh
dockers/base-conda/: Dockerfile
dockers/base-cuda/: Dockerfile
dockers/base-cuda-lts/: Dockerfile
dockers/fts-az-base/: .bashrc  Dockerfile
dockers/release/: Dockerfile
dockers/release-conda/: Dockerfile  conda_entrypoint.sh
dockers/release-lts/: Dockerfile
docs/source/: conf.py  fts_api.rst  governance.rst  index.rst  memprofiler_api.rst  versioning.rst
docs/source/_static/: fts_cust_roles.css  fts_cust_roles.rst
docs/source/_templates/: layout.html  theme_variables.jinja
docs/source/advanced/: fsdp_scheduled_fine_tuning.rst  lr_scheduler_reinitialization.rst  optimizer_reinitialization.rst
docs/source/distributed/: fsdp_scheduled_fine_tuning.rst  model_parallel_scheduled_fine_tuning.rst
docs/source/install/: dynamic_versioning.rst
docs/source/plugins/: strategy_adapter_entry_points.rst
docs/source/profiling/: memprofiler_profiling.rst
finetuning_scheduler/: __about__.py  __init__.py  fts.py  fts_supporters.py  setup_tools.py
fts_examples/: __init__.py  cli_experiment_utils.py  fts_superglue.py  patched_adamw.py  test_examples.py
fts_examples/config/: fts_defaults.yaml  fts_explicit.yaml  fts_explicit_test.yaml  fts_implicit.yaml
fts_examples/config/advanced/: RteBoolqModule_ft_schedule_deberta_base_reinit_lr.yaml  fts_explicit_reinit_lr.yaml  fts_implicit_reinit_lr.yaml
fts_examples/ipynb_src/: fts_superglue_nb.py
requirements/: base.txt  base.txt.orig  cli.txt  collect_env_details.py  devel.txt  docs.txt  examples.txt  extra.txt  ipynb.txt  lightning_pin.txt  pl_adjust_versions.py  standalone_base.txt  test.txt
requirements/ci/: overrides.txt  requirements-oldest.txt  requirements.txt  torch-nightly.txt  torch-pre.txt  torch_override.txt
requirements/utils/: lock_ci_requirements.sh  prune_torch_deps.py  sync_metadata.py
scripts/: README_warnings_cleanup.md  automate_warnings_cleanup.py  build_fts_env.sh  gen_fts_coverage.sh  infra_utils.sh  manage_standalone_processes.sh  manage_standalone_regex.cfg  run_warnings_cleanup.sh
src/finetuning_scheduler/: __about__.py  __init__.py  fts.py  fts_supporters.py  setup_tools.py  types.py
src/finetuning_scheduler/dynamic_versioning/: __init__.py  toggle_lightning_mode.py  utils.py
src/finetuning_scheduler/strategy_adapters/: __init__.py  _mp_imports.py  _wrap_utils.py  base.py  fsdp.py  model_parallel.py
src/fts_examples/: __init__.py  cfg_utils.py  cli_experiment_utils.py  fts_fsdp_superglue.py  fts_superglue.py  test_examples.py
src/fts_examples/config/: RteBoolqModule_ft_schedule_deberta_base_fsdp.yaml  RteBoolqModule_ft_schedule_deberta_base_fsdp_basic.yaml  RteBoolqModule_ft_schedule_deberta_base_sanity_check.yaml  fts_defaults.yaml  fts_explicit.yaml  fts_implicit.yaml  nofts_baseline.yaml
src/fts_examples/config/advanced/: fts_ddp_fsdp_baseline_profile.yaml  fts_explicit_reinit_lr.yaml  fts_fsdp_awp_override_offload_profile.yaml  fts_fsdp_awp_override_profile.yaml  fts_fsdp_awp_profile.yaml
src/fts_examples/ipynb_src/: fts_superglue_nb.py
src/fts_examples/legacy/: cli_experiment_utils.py  fts_fsdp_superglue.py  fts_superglue.py  patched_adamw.py  test_examples.py
src/fts_examples/legacy/config/: RteBoolqModule_ft_schedule_deberta_base.yaml  fts_defaults.yaml  fts_explicit.yaml
src/fts_examples/legacy/ipynb_src/: fts_superglue_nb.py
src/fts_examples/model_parallel/: mp_examples.py  torchtitan_llama.py
src/fts_examples/model_parallel/config/: fts_fsdp_auto_plan.yaml  fts_fsdp_auto_plan_act_ckpt.yaml  fts_fsdp_auto_plan_act_profile.yaml  fts_fsdp_auto_plan_noact_ckpt.yaml  fts_fsdp_profiling.yaml  fts_tp_plan.yaml  torchtitan_llama_larger_act.yaml
src/fts_examples/patching/: dep_patch_shim.py  patched_einsum_strategies.py  patched_lightning_jsonargparse.py  patched_numpyarrowextractor.py  patched_triton_jit_fn_init.py
src/fts_examples/profiling/: __init__.py  config.py  extended_profiler.py  memprofiler.py  npp_hooks.py  profiler_hooks_mixin.py
src/fts_examples/stable/: cli_experiment_utils.py  dep_patch_shim.py  extended_profiler.py  fts_fsdp_superglue.py  fts_superglue.py  patched_numpyarrowextractor.py  patched_triton_jit_fn_init.py  test_examples.py
src/fts_examples/stable/config/: RteBoolqModule_ft_schedule_deberta_base_fsdp.yaml  RteBoolqModule_ft_schedule_deberta_base_fsdp_basic.yaml  fts_defaults.yaml  fts_explicit.yaml
src/fts_examples/stable/ipynb_src/: fts_superglue_nb.py
src/fts_examples/stable/patching/: _patch_utils.py  dep_patch_shim.py  (+3 more)
tests/: .experiments  README.md  __init__.py  conftest.py  fsdp_expected_paths.py  infra_utils.sh  model_parallel_expected_paths.py  special_tests.sh  standalone_tests.sh  test_ddp_fully_sharded_native.py  test_dynamic_versioning_utils.py  test_finetuning_scheduler_callback.py  test_finetuning_scheduler_callback.py.orig  test_fsdp.py  test_model_parallel.py  test_setup_tools.py  test_strategy_adapter_discovery.py  test_toggle_lightning_mode.py  test_utils.sh
tests/deprecated_api/: __init__.py  test_remove_0-3-0.py  test_remove_0-4-0.py
tests/helpers/: __init__.py  boring_model.py  boring_models.py  common.py  direct_dep_req.txt  expected_warns.py  fake_adapter.py  req.txt  runif.py
(+34 files in other folders)
