[build-system]
# we require a setuptools version with PEP 639 support
requires = [
    "setuptools>=77.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "finetuning-scheduler"
dynamic = ["version", "description", "readme", "dependencies", "optional-dependencies"]
authors = [{name = "Daniel Dale", email = "danny.dale@gmail.com"}]
license = "Apache-2.0"
license-files = ["LICENSE*"]
requires-python = ">=3.9"
keywords = [
    "deep learning",
    "pytorch",
    "AI",
    "machine learning",
    "pytorch-lightning",
    "lightning",
    "fine-tuning",
    "finetuning",
]
classifiers = [
    "Environment :: Console",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://github.com/speediedan/finetuning-scheduler"
"Bug Tracker" = "https://github.com/speediedan/finetuning-scheduler/issues"
"Documentation" = "https://finetuning-scheduler.readthedocs.io/en/stable/"
"Source Code" = "https://github.com/speediedan/finetuning-scheduler"

[project.scripts]
toggle-lightning-mode = "finetuning_scheduler.dynamic_versioning.toggle_lightning_mode:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"fts_examples.config" = ["*.yaml"]
"fts_examples.config.advanced.fsdp" = ["*.yaml"]
"fts_examples.config.advanced.reinit_lr" = ["*.yaml"]
"fts_examples.config.advanced.reinit_optim_lr" = ["*.yaml"]
"fts_examples.model_parallel.config" = ["*.yaml"]
"fts_examples.model_parallel.config.defaults" = ["*.yaml"]
"fts_examples.model_parallel.config.profiling" = ["*.yaml"]

[tool.ruff]
line-length = 120
# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
    "E", "W",  # see: https://pypi.org/project/pycodestyle
    "F",  # see: https://pypi.org/project/pyflakes
]
lint.ignore = [
    "E731", # Do not assign a lambda expression, use a def
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    "docs",
    ".tox",
    "*.egg",
    "build",
    "temp",
]
# lint.ignore-init-module-imports = true
output-format = "pylint"

[tool.ruff.lint.per-file-ignores]
"src/fts_examples/ipynb_src/fts_superglue_nb.py" = ["E501","F401","F821"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["docs","fts_examples","finetuning_scheduler","tests"]
force-sort-within-sections = false
order-by-type = false

[tool.mypy]
files = ["src/finetuning_scheduler"]
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "False"
allow_redefinition = "True"
# disable this rule as the PL Trainer attributes are defined in the connectors, not in its __init__
disable_error_code = "attr-defined"
# style choices
warn_no_return = "False"
exclude = ['tests/.*']

# Ignore mypy errors for these files
# TODO: the goal is for this to be empty
#[[tool.mypy.overrides]]
# the list can be generated with:
# mypy | tr ':' ' ' |  awk '{print $1}' | sort | uniq | sed 's/\.py//g' | sed 's|\/|\.|g' | xargs -I {} echo '"{}",'
# module = []
# ignore_errors = "True"


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "warnings",
    "pass",
    "rank_zero_warn",
    "raise NotImplementedError",
    "except Exception"
]

[tool.pytest.ini_options]
pythonpath = "tests"
norecursedirs = [
    ".git",
    ".github",
    "dist",
    "build",
    "docs",
]

addopts = """--strict-markers --doctest-modules --color=yes --ignore-glob='src/fts_examples/ipynb_src/*.py' \
--ignore='.actions/assistant.py' --disable-pytest-warnings"""

junit_duration_report = "call"

[tool.jupytext]
notebook_metadata_filter = "-all"

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"scripts/" = "py"
