[build-system]
# we require a setuptools version with PEP 639 support
requires = [
    "setuptools>=77.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "finetuning-scheduler"
dynamic = ["version", "description", "readme", "dependencies"]
authors = [{name = "Daniel Dale", email = "danny.dale@gmail.com"}]
license = "Apache-2.0"
license-files = ["LICENSE*"]
requires-python = ">=3.10"
keywords = [
    "deep learning",
    "pytorch",
    "AI",
    "machine learning",
    "pytorch-lightning",
    "lightning",
    "fine-tuning",
    "finetuning",
]
classifiers = [
    "Environment :: Console",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
# CLI tools for LightningCLI integration
cli = [
    "jsonargparse[signatures]>=4.27.7,<4.42.0",
    "omegaconf>=2.2.3",
    "hydra-core>=1.2.0",
]
# Extended functionality
extra = [
    "rich>=12.3.0",
    # Include CLI deps
    "jsonargparse[signatures]>=4.27.7,<4.42.0",
    "omegaconf>=2.2.3",
    "hydra-core>=1.2.0",
]
# Example scripts dependencies
examples = [
    "datasets>=4.0.0",  # Important removal of trust_remote_code
    "evaluate>=0.3.0",
    "transformers>=4.26.0",
    "scikit-learn>=1.2.0",
    "sentencepiece>=0.2.0",
    "tensorboardX>=2.5",
    "tabulate>=0.8.9",
    "psutil>=5.9.0",
    # Include CLI deps
    "jsonargparse[signatures]>=4.27.7,<4.42.0",
    "omegaconf>=2.2.3",
    "hydra-core>=1.2.0",
]
# Jupyter notebook testing
ipynb = [
    "ipython>=7.10.0",
    "jupytext>=1.10.0",
    "nbval>=0.9.6",
    # Notebook infrastructure
    "notebook>=6.4.0",
    "nbformat>=5.0.0",
    "nbclient>=0.5.0",
    "nbconvert>=6.0.0",
    "jupyter-client>=7.0.0",
    "jupyter-core>=4.8.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
    "traitlets>=5.0.0",
]
# All optional dependencies combined
all = [
    # extra
    "rich>=12.3.0",
    # cli
    "jsonargparse[signatures]>=4.27.7,<4.42.0",
    "omegaconf>=2.2.3",
    "hydra-core>=1.2.0",
    # examples
    "datasets>=4.0.0",
    "evaluate>=0.3.0",
    "transformers>=4.26.0",
    "scikit-learn>=1.2.0",
    "sentencepiece>=0.2.0",
    "tensorboardX>=2.5",
    "tabulate>=0.8.9",
    "psutil>=5.9.0",
    # ipynb
    "ipython>=7.10.0",
    "jupytext>=1.10.0",
    "nbval>=0.9.6",
    "notebook>=6.4.0",
    "nbformat>=5.0.0",
    "nbclient>=0.5.0",
    "nbconvert>=6.0.0",
    "jupyter-client>=7.0.0",
    "jupyter-core>=4.8.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
    "traitlets>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/speediedan/finetuning-scheduler"
"Bug Tracker" = "https://github.com/speediedan/finetuning-scheduler/issues"
"Documentation" = "https://finetuning-scheduler.readthedocs.io/en/stable/"
"Source Code" = "https://github.com/speediedan/finetuning-scheduler"

[project.scripts]
toggle-lightning-mode = "finetuning_scheduler.dynamic_versioning.toggle_lightning_mode:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"fts_examples.config" = ["*.yaml"]
"fts_examples.config.advanced.fsdp" = ["*.yaml"]
"fts_examples.config.advanced.reinit_lr" = ["*.yaml"]
"fts_examples.config.advanced.reinit_optim_lr" = ["*.yaml"]
"fts_examples.model_parallel.config" = ["*.yaml"]
"fts_examples.model_parallel.config.defaults" = ["*.yaml"]
"fts_examples.model_parallel.config.profiling" = ["*.yaml"]

[tool.ruff]
line-length = 120
# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
    "E", "W",  # see: https://pypi.org/project/pycodestyle
    "F",  # see: https://pypi.org/project/pyflakes
]
lint.ignore = [
    "E731", # Do not assign a lambda expression, use a def
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    "docs",
    ".tox",
    "*.egg",
    "build",
    "temp",
]
# lint.ignore-init-module-imports = true
output-format = "pylint"

[tool.ruff.lint.per-file-ignores]
"src/fts_examples/ipynb_src/fts_superglue_nb.py" = ["E501","F401","F821"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["docs","fts_examples","finetuning_scheduler","tests"]
force-sort-within-sections = false
order-by-type = false

[tool.mypy]
files = ["src/finetuning_scheduler"]
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "False"
allow_redefinition = "True"
# disable this rule as the PL Trainer attributes are defined in the connectors, not in its __init__
disable_error_code = "attr-defined"
# style choices
warn_no_return = "False"
exclude = ['tests/.*']

# Ignore mypy errors for these files
# TODO: the goal is for this to be empty
#[[tool.mypy.overrides]]
# the list can be generated with:
# mypy | tr ':' ' ' |  awk '{print $1}' | sort | uniq | sed 's/\.py//g' | sed 's|\/|\.|g' | xargs -I {} echo '"{}",'
# module = []
# ignore_errors = "True"

[tool.pyright]
# Using "basic" mode for initial migration from mypy
# TODO: Progressively tighten to "standard" as type issues are resolved
typeCheckingMode = "basic"
include = ["src/finetuning_scheduler"]
exclude = [
    "tests",
    "docs",
    "build",
    "dist",
    ".git",
]
# Match mypy's ignore_missing_imports behavior
reportMissingImports = "none"
# Match mypy's disable_error_code = "attr-defined" for PL Trainer attributes
reportAttributeAccessIssue = "none"
# Match mypy's allow_redefinition behavior
reportConstantRedefinition = "none"
# Disable private import usage warnings - required for Lightning internals
reportPrivateImportUsage = "none"
# Disable general type issues for generator context managers until properly annotated
reportGeneralTypeIssues = "warning"
# Disable invalid type form warnings for dynamic type expressions
reportInvalidTypeForm = "none"
# Temporarily disable these until code is updated with proper type annotations
reportAssignmentType = "none"
reportCallIssue = "none"
reportIndexIssue = "none"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "warnings",
    "pass",
    "rank_zero_warn",
    "raise NotImplementedError",
    "except Exception"
]

[tool.pytest.ini_options]
pythonpath = "tests"
norecursedirs = [
    ".git",
    ".github",
    "dist",
    "build",
    "docs",
]

addopts = """--strict-markers --doctest-modules --color=yes --ignore-glob='src/fts_examples/ipynb_src/*.py' \
--ignore='.actions/assistant.py' --disable-pytest-warnings"""

junit_duration_report = "call"

[tool.jupytext]
notebook_metadata_filter = "-all"

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"scripts/" = "py"

# Dependency groups for development (PEP 735)
# These are NOT installed by default, only via uv pip install --group <name>
[dependency-groups]
dev = [
    # Development dependencies include test group
    "coverage>=6.4",
    "pytest>=7.0.0",
    "pytest-rerunfailures>=10.2",
    "twine>=3.2.0",
    "pyright>=1.1.390",
    "pre-commit>=2.0.0",
    "mlflow>=2.0.0",
]
test = [
    "coverage>=6.4",
    "pytest>=7.0.0",
    "pytest-rerunfailures>=10.2",
    "twine>=3.2.0",
    "pyright>=1.1.390",
    "pre-commit>=2.0.0",
    # protobuf upper bound removed - handled by dependency resolution
    "mlflow>=2.0.0",
]
# git dependencies installed separately (git URLs cannot be in universal lock files)
git-deps = [
    # Lightning is handled dynamically via setup.py based on PACKAGE_NAME and USE_CI_COMMIT_PIN
]

[tool.uv]
# Override dependencies for editable installations
# This replaces git URL dependencies with version constraints, allowing
# editable installations to satisfy requirements via UV's git dependency caching
override-dependencies = [
    # Lightning override handled via overrides file specified at install time for more flexibility
]

# PyTorch index configuration is handled via --torch-backend flag
# For CI (CPU-only): use --torch-backend=cpu
# For local dev (CUDA): use --torch-backend=auto or UV_TORCH_BACKEND=cu128
# See: https://docs.astral.sh/uv/guides/integration/pytorch/
# Note: We don't define explicit indices or sources here because --torch-backend
# configures everything automatically and allows flexibility between CPU/CUDA builds
