[build-system]
# we require a setuptools version with PEP 639 support
requires = [
    "setuptools>=77.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "finetuning-scheduler"
dynamic = ["version", "description", "readme", "dependencies"]
authors = [{name = "Daniel Dale", email = "danny.dale@gmail.com"}]
license = "Apache-2.0"
license-files = ["LICENSE*"]
requires-python = ">=3.10"

# NOTE: Minimum versions for torch and Lightning are managed dynamically by setup.py
# See src/finetuning_scheduler/dynamic_versioning/utils.py for version specifications:
#   - torch: defined in BASE_DEPENDENCIES
#   - Lightning: defined in LIGHTNING_PACKAGES (unified/standalone)
# The 'dependencies' field above is marked as 'dynamic' and populated at build time.
keywords = [
    "deep learning",
    "pytorch",
    "AI",
    "machine learning",
    "pytorch-lightning",
    "lightning",
    "fine-tuning",
    "finetuning",
]
classifiers = [
    "Environment :: Console",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
# CLI tools for LightningCLI integration
cli = [
    "jsonargparse[signatures]>=4.27.7",
    "omegaconf>=2.2.3",
    "hydra-core>=1.2.0",
]
# Extended functionality
extra = [
    "rich>=12.3.0",
    # Include CLI deps
    "jsonargparse[signatures]>=4.27.7",
    "omegaconf>=2.2.3",
    "hydra-core>=1.2.0",
]
# Example scripts dependencies
examples = [
    "datasets>=4.0.0",  # Important removal of trust_remote_code
    "evaluate>=0.3.0",
    "transformers>=4.26.0",
    "scikit-learn>=1.2.0",
    "sentencepiece>=0.2.0",
    "tensorboardX>=2.6.1",
    "tabulate>=0.8.9",
    "psutil>=5.9.0",
    "pip>=21.0.0",  # bc for torch collect_env until it supports uv
    # Include CLI deps
    "jsonargparse[signatures]>=4.27.7",
    "omegaconf>=2.2.3",
    "hydra-core>=1.2.0",
]
# Jupyter notebook testing
ipynb = [
    "ipython>=7.10.0",
    "jupytext>=1.10.0",
    "nbval>=0.9.6",
    # Notebook infrastructure
    "notebook>=6.4.0",
    "nbformat>=5.0.0",
    "nbclient>=0.5.0",
    "nbconvert>=6.0.0",
    "jupyter-client>=7.0.0",
    "jupyter-core>=4.8.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
    "traitlets>=5.0.0",
]
# All optional dependencies combined
all = [
    # extra
    "rich>=12.3.0",
    # cli
    "jsonargparse[signatures]>=4.27.7",
    "omegaconf>=2.2.3",
    "hydra-core>=1.2.0",
    # examples
    "datasets>=4.0.0",
    "evaluate>=0.3.0",
    "transformers>=4.26.0",
    "scikit-learn>=1.2.0",
    "sentencepiece>=0.2.0",
    "tensorboardX>=2.6.1",
    "tabulate>=0.8.9",
    "psutil>=5.9.0",
    "pip>=21.0.0",  # bc for torch collect_env until it supports uv
    # ipynb
    "ipython>=7.10.0",
    "jupytext>=1.10.0",
    "nbval>=0.9.6",
    "notebook>=6.4.0",
    "nbformat>=5.0.0",
    "nbclient>=0.5.0",
    "nbconvert>=6.0.0",
    "jupyter-client>=7.0.0",
    "jupyter-core>=4.8.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
    "traitlets>=5.0.0",
]

# -----------------------------------------------------------------------------
# FTS Metadata - Minimum Version Requirements (informational only)
# -----------------------------------------------------------------------------
# These values are for documentation purposes and are NOT used during installation.
# Actual minimum versions are enforced in src/finetuning_scheduler/dynamic_versioning/utils.py
# The build system (setup.py) reads from utils.py to populate the dynamic dependencies.
[tool.fts.min-versions]
torch = ">=2.6.0"
lightning = ">=2.6.0,<2.6.1"
python = "3.10"  # Defined in pyproject.toml requires-python

[project.urls]
"Homepage" = "https://github.com/speediedan/finetuning-scheduler"
"Bug Tracker" = "https://github.com/speediedan/finetuning-scheduler/issues"
"Documentation" = "https://finetuning-scheduler.readthedocs.io/en/stable/"
"Source Code" = "https://github.com/speediedan/finetuning-scheduler"

[project.scripts]
toggle-lightning-mode = "finetuning_scheduler.dynamic_versioning.toggle_lightning_mode:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"fts_examples.config" = ["*.yaml"]
"fts_examples.config.advanced.fsdp" = ["*.yaml"]
"fts_examples.config.advanced.reinit_lr" = ["*.yaml"]
"fts_examples.config.advanced.reinit_optim_lr" = ["*.yaml"]
"fts_examples.model_parallel.config" = ["*.yaml"]
"fts_examples.model_parallel.config.defaults" = ["*.yaml"]
"fts_examples.model_parallel.config.profiling" = ["*.yaml"]

[tool.ruff]
line-length = 120
# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
    "E", "W",  # see: https://pypi.org/project/pycodestyle
    "F",  # see: https://pypi.org/project/pyflakes
]
lint.ignore = [
    "E731", # Do not assign a lambda expression, use a def
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    "docs",
    ".tox",
    "*.egg",
    "build",
    "temp",
]
# lint.ignore-init-module-imports = true
output-format = "pylint"

[tool.ruff.lint.per-file-ignores]
"src/fts_examples/ipynb_src/fts_superglue_nb.py" = ["E501","F401","F821"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["docs","fts_examples","finetuning_scheduler","tests"]
force-sort-within-sections = false
order-by-type = false

[tool.pyright]
# Using "standard" mode for comprehensive type checking
typeCheckingMode = "standard"
include = ["src/finetuning_scheduler"]
exclude = [
    "tests",
    "docs",
    "build",
    "dist",
    ".git",
]
# Ignore missing imports from third-party libraries without type stubs
reportMissingImports = "none"
# Disable attribute access checks - PL Trainer attributes are defined in connectors, not __init__
reportAttributeAccessIssue = "none"
# Allow constant redefinition for dynamic configuration patterns
reportConstantRedefinition = "none"
# Disable private import usage warnings - required for Lightning internals
reportPrivateImportUsage = "none"
# Enable comprehensive type checking for standard mode
reportGeneralTypeIssues = "error"
reportAssignmentType = "error"
reportCallIssue = "error"
reportIndexIssue = "error"
# Disable invalid type form warnings for dynamic type expressions
reportInvalidTypeForm = "none"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "warnings",
    "pass",
    "rank_zero_warn",
    "raise NotImplementedError",
    "except Exception"
]

[tool.pytest.ini_options]
pythonpath = "tests"
norecursedirs = [
    ".git",
    ".github",
    "dist",
    "build",
    "docs",
]

addopts = """--strict-markers --doctest-modules --color=yes --ignore-glob='src/fts_examples/ipynb_src/*.py' \
--ignore='.actions/assistant.py' --disable-pytest-warnings"""

junit_duration_report = "call"

[tool.jupytext]
notebook_metadata_filter = "-all"

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"scripts/" = "py"

# Dependency groups for development (PEP 735)
# These are NOT installed by default, only via uv pip install --group <name>
[dependency-groups]
dev = [
    # Development dependencies include test group
    "coverage>=6.4",
    "pytest>=7.0.0",
    "pytest-rerunfailures>=10.2",
    "twine>=3.2.0",
    "pyright>=1.1.390",
    "pre-commit>=2.0.0",
    "mlflow>=3.0.0",
]
test = [
    "coverage>=6.4",
    "pytest>=7.0.0",
    "pytest-rerunfailures>=10.2",
    "twine>=3.2.0",
    "pyright>=1.1.390",
    "pre-commit>=2.0.0",
    # protobuf upper bound removed - handled by dependency resolution
    "mlflow>=3.0.0",
]
# git dependencies installed separately (git URLs cannot be in universal lock files)
git-deps = [
    # Lightning is handled dynamically via setup.py based on PACKAGE_NAME and USE_CI_COMMIT_PIN
]

[tool.uv]
# Override dependencies for editable installations
# This replaces git URL dependencies with version constraints, allowing
# editable installations to satisfy requirements via UV's git dependency caching
override-dependencies = [
    # Lightning override handled via overrides file specified at install time for more flexibility
]

# PyTorch index configuration is handled via --torch-backend flag
# For CI (CPU-only): use --torch-backend=cpu
# For local dev (CUDA): use --torch-backend=auto or UV_TORCH_BACKEND=cu128
# See: https://docs.astral.sh/uv/guides/integration/pytorch/
# Note: We don't define explicit indices or sources here because --torch-backend
# configures everything automatically and allows flexibility between CPU/CUDA builds
